--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -32,12 +32,10 @@ jobs:
           ./server-configs
           ./compose-server-root.yml
 
-      
     - name: Delete Old Containers
       run: |
         sudo docker rm -f $(sudo docker ps -qa) || true
         sudo bash -c 'echo y | docker system prune' 
-
 
     - name: Compose Up Services 
       env:
@@ -47,6 +45,6 @@ jobs:
       run: | 
         touch .env.server && touch .env.proxy
         sudo bash -c 'echo "${{ secrets.SERVER_ENV }}" > .env.server'
-        sudo --preserve-env=API_DOMAIN bash -c 'echo "SERVER_NAME=${{ vars.API_DOMAIN }}" >> .env.proxy'
+        sudo bash -c 'echo "SERVER_NAME=${{ vars.API_DOMAIN }}" >> .env.proxy'
         chmod +x ./scripts/server/compose.sh
         ./scripts/server/compose.sh
