--- a/server-configs/config.conf
+++ b/server-configs/config.conf
@@ -18,8 +18,8 @@ server {
 		proxy_pass http://api;
 
 		proxy_http_version 1.1;
-		proxy_set_header Upgrade '';
-		proxy_set_header Connection '';
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection 'upgrade';
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
 
