--- a/server-configs/config.conf
+++ b/server-configs/config.conf
@@ -5,13 +5,14 @@ upstream api {
 
 server {    
 	
-	listen [::]:443 ssl;
-    listen 443 ssl;
-
+	listen [::]:443 ssl http2;
+    listen 443 ssl http2;
+	
     ssl_certificate /etc/ssl/certs/flow-cert.pem;
     ssl_certificate_key /etc/ssl/private/flow-key.pem;
 
 	server_name ${SERVER_NAME};
+	server_tokens off; 
 
 	location / {
 
@@ -31,6 +32,25 @@ server {
 		chunked_transfer_encoding off;
 		proxy_buffering off;
 		proxy_cache off;
+
+		# ssl_session_timeout 1d;
+		# ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
+		# ssl_session_tickets off;
+
+		# intermediate configuration
+		ssl_protocols TLSv1.2 TLSv1.3;
+		ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-CHACHA20-POLY1305;
+		ssl_prefer_server_ciphers off;
+
+		# (63072000 seconds)
+		add_header Strict-Transport-Security "max-age=63072000" always;
+
+		add_header X-XSS-Protection "1; mode=block";
+
+		client_body_buffer_size 1K;
+        client_header_buffer_size 1k;
+        client_max_body_size 1k;
+        large_client_header_buffers 2 1k;
 
 	}
 
