--- a/server-configs/config.conf
+++ b/server-configs/config.conf
@@ -38,14 +38,14 @@ server {
 		# ssl_session_tickets off;
 
 		# intermediate configuration
-		ssl_protocols TLSv1.2 TLSv1.3;
-		ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-CHACHA20-POLY1305;
-		ssl_prefer_server_ciphers off;
+		# ssl_protocols TLSv1.2 TLSv1.3;
+		# ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-CHACHA20-POLY1305;
+		# ssl_prefer_server_ciphers off;
 
-		# (63072000 seconds)
-		add_header Strict-Transport-Security "max-age=63072000" always;
+		# # (63072000 seconds)
+		# add_header Strict-Transport-Security "max-age=63072000" always;
 
-		add_header X-XSS-Protection "1; mode=block";
+		# add_header X-XSS-Protection "1; mode=block";
 
 		client_body_buffer_size 1K;
         client_header_buffer_size 1k;
