--- a/server-configs/config.conf
+++ b/server-configs/config.conf
@@ -2,6 +2,8 @@ upstream api {
 	server api-server:8080;
 }
 
+limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
+limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=8r/s;
 
 server {    
 	
@@ -12,6 +14,9 @@ server {
     ssl_certificate_key /etc/ssl/private/flow-key.pem;
 
 	server_name ${SERVER_NAME};
+
+	limit_conn conn_limit_per_ip 10;
+    limit_req zone=req_limit_per_ip burst=10 nodelay;
 
 	location / {
 
