--- a/server-configs/config.conf
+++ b/server-configs/config.conf
@@ -14,9 +14,14 @@ server {
     ssl_certificate_key /etc/ssl/private/flow-key.pem;
 
 	server_name ${SERVER_NAME};
-
+	
 	limit_conn conn_limit_per_ip 10;
     limit_req zone=req_limit_per_ip burst=10 nodelay;
+
+	client_body_buffer_size 10K;
+	client_header_buffer_size 1k;
+	client_max_body_size 8m;
+	large_client_header_buffers 2 1k;
 
 	location / {
 
@@ -36,7 +41,6 @@ server {
 		chunked_transfer_encoding off;
 		proxy_buffering off;
 		proxy_cache off;
-		
 
 	}
 
