--- a/server-configs/config.conf
+++ b/server-configs/config.conf
@@ -15,9 +15,11 @@ server {
 
 	server_name ${SERVER_NAME};
 	
+	# connection/request rate policy
 	limit_conn conn_limit_per_ip 10;
     limit_req zone=req_limit_per_ip burst=10 nodelay;
 
+	# buffer policy
 	client_body_buffer_size 10K;
 	client_header_buffer_size 1k;
 	client_max_body_size 8m;
@@ -33,15 +35,18 @@ server {
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
 
+		# session cookie configs
 		proxy_set_header X-Forwarded-Proto $scheme;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Cookie $http_cookie;
 
+		# server-sent events configs
 		chunked_transfer_encoding off;
 		proxy_buffering off;
 		proxy_cache off;
 
+		proxy_hide_header X-Powered-By;
 	}
 
 }
