--- a/server-configs/config.conf
+++ b/server-configs/config.conf
@@ -15,7 +15,7 @@ server {
 
 	server_name ${SERVER_NAME};
 	
-	# connection/request rate policy
+	# connection/request-rate policy
 	limit_conn conn_limit_per_ip 10;
     limit_req zone=req_limit_per_ip burst=10 nodelay;
 
@@ -41,7 +41,7 @@ server {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Cookie $http_cookie;
 
-		# server-sent events configs
+		# server-sent event configs
 		chunked_transfer_encoding off;
 		proxy_buffering off;
 		proxy_cache off;
